@@ -10,9 +10,11 @@ import com.nongsabu.backend.domain.report.dto.AnalysisReportResponse;
 import com.nongsabu.backend.domain.report.entity.AnalysisReport;
 import com.nongsabu.backend.domain.report.entity.ReportStatus;
 import com.nongsabu.backend.domain.report.repository.ReportAnalysisReportRepository;
+import com.nongsabu.backend.infra.ai.llm.LlmClient;
 import com.nongsabu.backend.infra.external.KamisClient;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -26,6 +28,7 @@ public class ReportService {
     private final ReportAnalysisReportRepository analysisReportRepository;
     private final RagService ragService;
     private final KamisClient kamisClient;
+    private final LlmClient llmClient;
 
     @Transactional
     public AnalysisReportResponse generate(Long memberId, Long imageId) {
@@ -41,7 +44,7 @@ public class ReportService {
         );
         String ragContext = String.join("\n---\n", ragContextList);
         String marketContext = kamisClient.getMarketSnapshot(resolveCropName(image));
-        String reportText = buildReport(result, ragContext, marketContext);
+        String reportText = generateReportText(image, result, ragContext, marketContext);
 
         AnalysisReport report = analysisReportRepository.findByUploadedImageId(imageId)
                 .orElseGet(() -> analysisReportRepository.save(AnalysisReport.builder()
@@ -56,6 +59,25 @@ public class ReportService {
         return AnalysisReportResponse.from(report);
     }
 
+    private String generateReportText(
+            UploadedImage image,
+            ImageAnalysisResult result,
+            String ragContext,
+            String marketContext
+    ) {
+        String prompt = buildLlmPrompt(image, result);
+        String context = buildLlmContext(ragContext, marketContext);
+        try {
+            String generated = llmClient.generate(prompt, context);
+            if (StringUtils.isNotBlank(generated)) {
+                return generated;
+            }
+        } catch (Exception ignored) {
+            // Keep report generation available in local MVP mode even when the external LLM is not configured.
+        }
+        return buildRuleBasedReport(result, ragContext, marketContext);
+    }
+
     private String resolveCropName(UploadedImage image) {
         if (image.getCrop() != null) {
             return image.getCrop().getName();
@@ -66,17 +88,51 @@ public class ReportService {
         return "작물";
     }
 
-    private String buildReport(ImageAnalysisResult result, String ragContext, String marketContext) {
+    private String buildLlmPrompt(UploadedImage image, ImageAnalysisResult result) {
+        return """
+                작물: %s
+                진단명: %s
+                신뢰도: %.2f
+                위험도: %s
+                분석 요약: %s
+                1차 권장 조치: %s
+
+                위 정보를 바탕으로 초보 농가가 바로 따라 할 수 있는 대처 리포트를 작성하세요.
+                리포트에는 요약, 의심 원인, 즉시 조치, 관찰 체크리스트, 전문가 상담 권고를 포함하세요.
+                """.formatted(
+                resolveCropName(image),
+                result.getDiseaseName(),
+                result.getConfidence(),
+                result.getSeverity(),
+                result.getSummary(),
+                result.getRecommendation()
+        );
+    }
+
+    private String buildLlmContext(String ragContext, String marketContext) {
+        return """
+                [RAG 문서 근거]
+                %s
+
+                [외부 시장 정보]
+                %s
+                """.formatted(
+                StringUtils.isBlank(ragContext) ? "관련 매뉴얼 문맥이 없습니다." : ragContext,
+                marketContext
+        );
+    }
+
+    private String buildRuleBasedReport(ImageAnalysisResult result, String ragContext, String marketContext) {
         return """
                 [병충해 분석 요약]
                 - 진단: %s
                 - 신뢰도: %.2f
-                - 심각도: %s
+                - 위험도: %s
 
                 [1차 대처 가이드]
                 %s
 
-                [RAG 매뉴얼 문맥]
+                [RAG 매뉴얼 근거]
                 %s
 
                 [외부 시장 정보]
@@ -86,7 +142,7 @@ public class ReportService {
                 result.getConfidence(),
                 result.getSeverity(),
                 result.getRecommendation(),
-                ragContext.isBlank() ? "관련 매뉴얼 문맥이 없습니다." : ragContext,
+                StringUtils.isBlank(ragContext) ? "관련 매뉴얼 문맥이 없습니다." : ragContext,
                 marketContext
         );
     }
